--- a/login.html
+++ b/login.html
@@ -9,6 +9,8 @@ Body {
   background-color: white;  
 
 }  
+h2{
+text-align:center;}
 button {   
        background-color: #0099cc;   
        width: 100%;  
@@ -22,6 +24,7 @@ button {
         border: 3px solid #f1f1f1;  
 		width : 50%;
 		margin:auto;
+		padding:25px;
     }   
  input[type=text], input[type=password] {   
         width: 100%;   
@@ -46,21 +49,29 @@ button {
         padding: 25px;   
         background-color: white;  
     }   
+	#login{
+text-decoration:none;
+color:white}
+#forgot-pw{color:black}
+
+
 </style>   
 </head>    
 <body>    
     <center> <h1> Sign In </h1> </center>   
-    <form>  
-        <div class="container">   
-            <label>Username : </label>   
-            <input type="text" placeholder="Enter Username" name="username" required>  
-            <label>Password : </label>   
-            <input type="password" placeholder="Enter Password" name="password" required>  
-            <button type="submit">Login</button>   
-            <input type="checkbox" checked="checked"> Remember me   
-            <button type="button" class="cancelbtn"> Cancel</button>   
-            Forgot <a href="#"> password? </a>   
-        </div>   
-    </form>     
+    <div class="container">
+<div class="main">
+<h2>Javascript Login Form Validation</h2>
+<form id="form_id" method="post" name="myform">
+<label>User Name :</label>
+<input type="text" name="username" id="username"/>
+<label>Password :</label>
+<input type="password" name="password" id="password"/>
+<input type="button" value="Login" id="submit" onclick="validate()"/>
+<button><a href="index.html">Continue without login</button>
+</form>
+
+
+	
 </body>     
 </html>  
