--- a/register.html
+++ b/register.html
@@ -54,7 +54,9 @@ hr {
   width: 100%;
   opacity: 0.9;
 }
-
+.registerbtn a{
+color:white;
+text-decoration:none}
 .registerbtn:hover {
   opacity: 1;
 }
@@ -69,34 +71,120 @@ a {
   background-color: #f1f1f1;
   text-align: center;
 }
+table{
+padding:20px;
+margin:20px;
+border:none;
+}
+#regsiterBtn{width:100%;
+float:center;
+background-color:#0099cc;
+border:none;
+padding:20px;
+
+}
 </style>
 </head>
 <body>
 
-<form action="/action_page.php">
-  <div class="container">
-    <h1>Register</h1>
-    <p>Please fill in this form to create an account.</p>
-    <hr>
+<center>
+    <table border="1">
+        <tr>
+            <td>
+                <form name="registerationform" method="POST" action="login.html" onsubmit="return(regvalidate())">
+                    <table>
+                        <tr>
+                            <td>First Name: </td>
+                            <td><input type="text" name="fnametxt" /><br/> </td>
+                        </tr>
+                        <tr>
+                            <td>Second Name: </td>
+                            <td> <input type="text" name="snametxt" /><br/></td>
+                        </tr>
+                        <tr>
+                            <td> User Name:</td>
+                            <td><input type="text" name="unametxt" /><br/> </td>
+                        </tr>
+                        <tr>
+                            <td>Email Address: </td>
+                            <td> <input type="text" name="emailtxt" /><br/></td>
+                        </tr>
+        </tr>
+        <tr>
+            <td> Password : </td>
+            <td> <input type="password" name="pwdtxt" /> <br/> </td>
+        </tr>
+        </tr>
+        <tr>
+            <td> Confirm : </td>
+            <td> <input type="password" name="cpwdtxt" /> <br/> </td>
+        </tr>
+        </table>
+        <font color='red'>
+            <div id="une"> </div>
+        </font>
+        <input type="submit" id="regsiterBtn" value="Register Now" />
+        </form>
+        </td>
+        </th>
+        </tr>
+    </table>
+    </tr>
+    </table>
+    </tr>
+<script type="text/javaScript">
+function regvalidate()
+ 
+{
+if((document.registerationform.fnametxt.value=="")&&(document.registerationform.snametxt.value==""))
+ {
+  document.getElementById('une').innerHTML = "First name or Second name should not be empty";
+  registerationform.fnametxt.focus();
+  return(false);
+ }
+ 
+if(document.registerationform.unametxt.value=="")
+  {
+  document.getElementById('une').innerHTML = "User name field should not be empty";
+  registerationform.unametxt.focus();
+  return(false);
+ }
+ 
+if(document.registerationform.emailtxt.value=="")
+  {
+  document.getElementById('une').innerHTML = "Email id requered";
+  registerationform.emailtxt.focus();
+  return(false);
+  }
+ 
+if(document.registerationform.pwdtxt.value=="")
+   {
+  document.getElementById('une').innerHTML = "Please type a password";
+  registerationform.pwdtxt.focus();
+  return(false);
+   }
+ 
+if((document.registerationform.pwdtxt.value) != (document.registerationform.cpwdtxt.value))
+   {
+  document.getElementById('une').innerHTML = "Password Must be equal";
+  registerationform.pwdtxt.value = "";
+  registerationform.cpwdtxt.value = "";
+  registerationform.pwdtxt.focus();
+  return(false);
+  }
+else
+   {
+   return(true);
+   }
+}
+</script>
+    </td>
+    </tr>
+    </table>
+</center>
 
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" id="email" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
-    <hr>
-    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-
-    <button type="submit" class="registerbtn">Register</button>
-  </div>
-  
-  <div class="container signin">
-    <p>Already have an account? <a href="#">Sign in</a>.</p>
-  </div>
-</form>
 
 </body>
 </html>
